[fix] Fix Modal Component _css z-index

--- a/view-user/src/components/common/Modal/Modal.module.css
+++ b/view-user/src/components/common/Modal/Modal.module.css
@@ -13,7 +13,7 @@
 
 .content {
   position: relative;
-  z-index: 1;
+  z-index: 50;
   box-sizing: border-box;
   object-fit: cover;
   padding: 40px;
@@ -51,6 +51,7 @@
 
 .background {
   position: absolute;
+  z-index: 25;
   top: 0;
   left: 0;
   width: 100%;
